--- a/app/src/main/res/layout/fragment_add_route.xml
+++ b/app/src/main/res/layout/fragment_add_route.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Add route"
+        android:text="Add route"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_route_info" />
