--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.Bruh" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorAccent">@color/black</item>
+        <item name="colorAccent">@color/logo</item>
         <item name="colorPrimaryDark">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorError">@color/teal_200</item>
